--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="white_text">#FFFFFB</color>
     <color name="blue_text_more">#5F89A9</color>
     <color name="violet_pill_background">#353361</color>
+    <color name="blue_icon_tint">#6693AB</color>
 </resources>
