--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,6 @@
     <color name="grey_cards">#152C39</color>
     <color name="white_text">#FFFFFB</color>
     <color name="dim_text">#5F89A9</color>
+    <color name="violet_pill_background">#353361</color>
     <color name="blue_icon_tint">#6693AB</color>
 </resources>
